tests/ui/parse/self_not_first.rx
//@ spec: RXS-0014
impl Euler {
    fn bad(x: i32, self) {} //~ ERROR RX0008
}
